# codex-storage-proofs-circuits

./: .gitignore  README.md
.github/workflows/: generate.yml
circuit/: README.md  binary_compare.circom  extract_bits.circom  log2.circom  merkle.circom  misc.circom  poseidon2_hash.circom  poseidon2_perm.circom  poseidon2_sponge.circom  sample_cells.circom  single_cell.circom  slot_main.circom  test_compare.sh  test_prove.sh  test_slotmain.sh
circuit/codex/: merkle.circom  sample_cells.circom
circuit/deprecated/: main_test_compare.circom
circuit/lib/: log2.circom
circuit/poseidon2/: poseidon2_compr.circom  poseidon2_hash.circom  poseidon2_perm.circom
reference/: README.md
reference/haskell/: .gitignore  Poseidon2.hs  Sampling.hs  Slot.hs  storage-proof-ref.cabal  testMain.hs
reference/haskell/Poseidon2/: Example.hs  Merkle.hs  RoundConsts.hs  Sponge.hs
reference/haskell/cli/: testMain.hs
reference/haskell/src/: DataSet.hs  Misc.hs  Poseidon2.hs  Sampling.hs  Slot.hs  TestVectors.hs
reference/haskell/src/Poseidon2/: Merkle.hs  Permutation.hs  Sponge.hs
reference/nim/: .gitignore
reference/nim/proof_input/: .gitignore  README.md  proof_input.nimble
reference/nim/proof_input/src/: blocks.nim  cli.nim  dataset.nim  gen_input.nim  json.nim  merkle.nim  misc.nim  sample.nim  slot.nim  testmain.nim  types.nim
reference/nim/proof_input/src/blocks/: bn254.nim  goldilocks.nim
reference/nim/proof_input/src/gen_input/: bn254.nim  goldilocks.nim
reference/nim/proof_input/src/json/: bn254.nim  goldilocks.nim  shared.nim
reference/nim/proof_input/src/merkle/: bn254.nim
reference/nim/proof_input/src/merkle/goldilocks/: monolith.nim  poseidon2.nim
reference/nim/proof_input/src/sample/: bn254.nim  goldilocks.nim
reference/nim/proof_input/src/types/: bn254.nim  goldilocks.nim
reference/nim/testvectors/: testvectors.nimble
reference/nim/testvectors/src/: testvectors.nim
test/: .gitignore  CircuitCommon.hs  Main.hs  Params.hs  README.md
test/Circuit/: BinaryCompare.hs  BinaryGTE.hs  BinaryLTE.hs  CeilingLog2.hs  ExtractBits.hs  Log2.hs
workflow/: .gitignore  PROOFS.md  README.md  cli_args.sh  params.sh  paths.sh  prove.sh  ptau.sh  setup.sh
